[package]
name = "chf"
version = "0.3.0"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>"]
license = "CC0-1.0"
# TODO: Move this crate to `github.com/rust-bitcoin`.
repository = "https://github.com/tcharding/rust-chf"
documentation = "https://docs.rs/chf/"
description = "Cryptographic hash functions used by rust-bitcoin"
categories = ["algorithms"]
keywords = [ "crypto", "hash", "digest", "bitcoin" ]
readme = "README.md"
edition = "2021"
rust-version = "1.56.1"
exclude = ["tests", "contrib"]

[features]
default = ["std"]
std = ["alloc", "hex/std", "bitcoin-io/std"]
alloc = ["hex/alloc"]
# If you want I/O you must enable either "std" or "io".
io = ["bitcoin-io"]
# Smaller (but slower) implementation of sha256, sha512 and ripemd160
small-hash = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
hex = { package = "hex-conservative", version = "0.2.0", default-features = false }

bitcoin-io = { version = "0.1.1", default-features = false, optional = true }
schemars = { version = "0.8.3", default-features = false, optional = true }
serde = { version = "1.0", default-features = false, optional = true }

[dev-dependencies]
serde_test = "1.0"
serde_json = "1.0"

[lints.rust]
unexpected_cfgs = { level = "deny", check-cfg = ['cfg(bench)', 'cfg(hashes_fuzz)', 'cfg(rust_v_1_64)' ] }
